--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "echo build"
   },
   "author": "Mitch Heddles <mitchell.heddles@gmail.com>",
   "keywords": [
